--- a/frontend/src/css/home/main.scss
+++ b/frontend/src/css/home/main.scss
@@ -4,20 +4,19 @@
   grid-column-gap: 0.4em;
   grid-template-columns: 39% 35% 24% auto;
   @include xs {
-    max-width: 32em;
-    min-width: 20em
+    max-width: 520px;
   }
   @include md {
-    min-width: 32em;
-    max-width: 42em;
+    min-width: 576px;
+    max-width: 700px;
   }
   @include lg {
-    min-width: 34em;
-    max-width: 42em;
+    min-width: 768px;
+    max-width: 900px;
   }
   @include xl {
-    min-width: 56em;
-    max-width: 68em;
+    min-width: 992px;
+    max-width: 1100px;
   }
 }
 
