--- a/frontend/src/css/home/tertiary.scss
+++ b/frontend/src/css/home/tertiary.scss
@@ -5,21 +5,20 @@
   border-top: 1px solid #8080804a;
   padding-top: 2em;
   @include xs {
-    max-width: 32em;
-    min-width: 20em
+    max-width: 520px;
   }
   @include md {
     grid-template-columns: 60% auto;
-    min-width: 32em;
-    max-width: 42em;
+    min-width: 576px;
+    max-width: 700px;
   }
   @include lg {
-    min-width: 34em;
-    max-width: 42em;
+    min-width: 768px;
+    max-width: 900px;
   }
   @include xl {
-    min-width: 56em;
-    max-width: 69em;
+    min-width: 992px;
+    max-width: 1100px;
   }
 }
 
@@ -65,22 +64,22 @@
     }
   }
   p {
-    max-width: 22em;
     margin: 10px 0;
     margin-bottom: 0.6em;
     font-size: 17px;
-    @include xs {
-      line-height: 1.1;
+    width: 90%;
+    line-height: 1.1;
+    a {
       display: -webkit-box;
       -webkit-line-clamp: 2;
       -webkit-box-orient: vertical;
+      overflow: hidden;  
     }
     @include md {
       line-height: 1.4;
-      overflow: hidden;  
-    }
-    @include xl {
-      -webkit-line-clamp: 3;
+      a {
+        -webkit-line-clamp: 3;        
+      }
     }
   }
   span {
