--- a/frontend/src/css/navbar.scss
+++ b/frontend/src/css/navbar.scss
@@ -6,23 +6,22 @@
   height: 75px;
   box-sizing: border-box;
   align-items: center;
+  padding-left: 0.15em;
+  padding-right: 0.15em;
   @include xs {
-    padding: 0 0.1em;
-    max-width: 32em;
-    min-width: 20em
+    max-width: 520px;
   }
   @include md {
-    min-width: 32em;
-    max-width: 42em;
+    min-width: 576px;
+    max-width: 700px;
   }
   @include lg {
-    min-width: 34em;
-    max-width: 42em;
+    min-width: 768px;
+    max-width: 900px;
   }
   @include xl {
-    padding: 0 0.2em;
-    min-width: 56em;
-    max-width: 69em;
+    min-width: 992px;
+    max-width: 1100px;
   }
 }
 
@@ -33,10 +32,13 @@
 .navbar-buttons {
   display: flex;
   > a {
-    font-size: 17px;
     padding: 10px;
     border-radius: 10px;
     transition: 0.2s;
+    font-size: 14px;
+    @include md {
+      font-size: 17px;
+    }
     i {
         padding-right: 8px;
     }
@@ -57,11 +59,14 @@
 }
 
 .navbar-signout-button {
-  font-size: 17px;
+  font-size: 14px;
   padding: 10px;
   border-radius: 10px;
   i {
     padding-right: 8px;
+  }
+  @include md {
+    font-size: 17px;
   }
 }
 
