--- a/frontend/src/css/profile/feed.scss
+++ b/frontend/src/css/profile/feed.scss
@@ -85,11 +85,13 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  font-size: 17px;
 }
 
 .comment-panel-article-additional {
   display: flex;
   align-items: center;
+  font-size: 17px;
 }
 
 .comment-panel-article-additional i {
